argocd/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: ingress-gateway
    namespace: istio-ingress
  hostnames:
    - argocd.alterai.pl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: argocd-server
        port: 80
