argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  tls:
  - hosts:
    - argocd.alterai.pl
    secretName: argocd-alterai-pl-tls
  rules:
  - host: argocd.alterai.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
